# Trixie-Simulation

./: .gitignore  README.md  pyproject.toml
trixie_simulation/: __init__.py  converter.py  simulation.py
